--- a/webapp/package.json
+++ b/webapp/package.json
@@ -28,7 +28,8 @@
   },
   "dependencies": {
     "@popperjs/core": "^2.9.2",
-    "bootstrap": "^5.0.1"
+    "bootstrap": "^5.0.1",
+    "dotenv": "^16.3.1"
   },
   "license": "CC-BY-SA-4.0"
 }
