--- a/dev.properties
+++ b/dev.properties
@@ -1,3 +1,5 @@
 BaseUri=http://localhost:8080/
-DatabaseFilePath=db.json
+DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbteodor_arbureanu
+DatabaseUser=teodor_arbureanu
+DatabasePassword=Teodor2000
 JWTSecret=group20
