--- a/webapp/package.json
+++ b/webapp/package.json
@@ -12,6 +12,7 @@
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "babel-loader": "^8.2.2",
+    "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^5.2.6",
     "eslint": "^8.18.0",
     "eslint-config-airbnb-base": "^15.0.0",
