fix:api port to 3000

--- a/dev.properties
+++ b/dev.properties
@@ -1,4 +1,4 @@
-BaseUri=http://localhost:8080/
+BaseUri=http://localhost:3000
 DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbteodor_arbureanu
 DatabaseUser=teodor_arbureanu
 DatabasePassword=Teodor2000
