feat: add creation contact page and creation company page

--- a/dev.properties
+++ b/dev.properties
@@ -1,5 +1,5 @@
 BaseUri=http://localhost:3000
-DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbteodor_arbureanu
-DatabaseUser=teodor_arbureanu
-DatabasePassword=Teodor2000
+DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbhamadi_gaddih
+DatabaseUser=hamadi_gaddih
+DatabasePassword=hamadipae
 JWTSecret=group20
