--- a/webapp/.gitignore
+++ b/webapp/.gitignore
@@ -10,3 +10,6 @@ package-lock.json
 dist/*
 # but (re)include specific dist directory files, e.g.
 #!frontend-essentials/step-1/dist
+
+# ignore the dev.properties file
+dev.properties
