feat : getAllEnterprises method

--- a/dev.properties
+++ b/dev.properties
@@ -3,3 +3,4 @@ DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbmatteo_erismann?use
 DatabaseUser=matteo_erismann
 DatabasePassword=Bada!dan4751
 JWTSecret=group20
+LogPath=C:\Users\matte\OneDrive\Bureau\Vinci\bloc_2\logs
