--- a/pom.xml
+++ b/pom.xml
@@ -90,6 +90,11 @@
 			<groupId>org.apache.commons</groupId>
 			<version>2.12.0</version>
 		</dependency>
+		<dependency>
+			<artifactId>jackson-datatype-jsr310</artifactId>
+			<groupId>com.fasterxml.jackson.datatype</groupId>
+			<version>2.17.0</version>
+		</dependency>
 	</dependencies>
 	<dependencyManagement>
 		<dependencies>
