--- a/webapp/package.json
+++ b/webapp/package.json
@@ -30,6 +30,7 @@
   "dependencies": {
     "@popperjs/core": "^2.9.2",
     "bootstrap": "^5.0.1",
+    "chart.js": "^4.4.2",
     "dotenv": "^16.3.1"
   },
   "license": "CC-BY-SA-4.0"
