--- a/dev.properties
+++ b/dev.properties
@@ -1,6 +1,7 @@
-BaseUri=http://localhost:3000/
-DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbjason_chu
-DatabaseUser=jason_chu
-DatabasePassword=Fajx!09A
+BaseUri=http://localhost:3000
+DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbteodor_arbureanu
+DatabaseUser=teodor_arbureanu
+DatabasePassword=Teodor2000
 JWTSecret=group20
+LogPath=C:/Users/teodo/Documents/Informatique_de_Gestion_DE_VINCI/BIN2/BINV2090-2_Conception_d'applications_d'entreprise/Projet_AE/logs
 ```
