refactor : check contact state for addInternship

--- a/dev.properties
+++ b/dev.properties
@@ -1,7 +1,6 @@
 BaseUri=http://localhost:3000
-DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbteodor_arbureanu
-DatabaseUser=teodor_arbureanu
-DatabasePassword=Teodor2000
+DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbmatteo_erismann?user=matteo_erismann
+DatabaseUser=matteo_erismann
+DatabasePassword=Bada!dan4751
 JWTSecret=group20
-LogPath=C:/Users/teodo/Documents/Informatique_de_Gestion_DE_VINCI/BIN2/BINV2090-2_Conception_d'applications_d'entreprise/Projet_AE/logs
-```
+LogPath=C:/Users/matte/OneDrive/Bureau/Vinci/bloc_2/logs
