refractor: refractor methods to internship + check and tests for methods

--- a/dev.properties
+++ b/dev.properties
@@ -1,7 +1,6 @@
-BaseUri=http://localhost:3000
-DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbhamadi_gaddih?user=hamadi_gaddih
-DatabaseUser=hamadi_gaddih
-DatabasePassword=hamadipae
+BaseUri=http://localhost:3000/
+DatabaseFilePath=jdbc:postgresql://coursinfo.vinci.be:5432/dbjason_chu
+DatabaseUser=jason_chu
+DatabasePassword=Fajx!09A
 JWTSecret=group20
-LogPath=C:/Users/hamad/OneDrive/Documents/logs
 ```
